Fix T81227: Modifier menu and text switch places

Logic was incorrect, mistake in f3b8792b963b.

Updated comment to make intent more clear.